# remedy

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  test-bad.md  test.md
.github/workflows/: build.yml
include/: input.h  kitty_graphics.h  lint.h  md_parser.h  pager.h  remedy.h  render_line.h  renderer.h  sanitize.h  search.h  stb_image.h  syntax_highlight.h  table_layout.h
man/: remedy.1
packaging/: build-deb.sh  build-mac.sh  remedy.rb
src/: input.c  kitty_graphics.c  lint.c  main.c  md_parser.c  pager.c  render_line.c  renderer.c  sanitize.c  search.c  stb_image_impl.c  syntax_highlight.c  table_layout.c
